            _conf..: Muda processo de CIP para ter três enxágues adicionais no final (pedido do Zé).
                     Muda a receita de cultivo (1000L e 2000L) para aplicar antiespumante logo após a inserção de meio.
                     PHs de Bacterias alterado para 5 a 7.2 e Fungos de 3.5 a 5.5 (pedido do Zé).
                     Tempo de circulação do Meio modificado para 60 seg (pedido do Zé).

1.2.34  -   Master.: Força o volume de Transferência (BIO / IBC) ser sempre o volume total, independente do que vier do Front (excessão se for 0)
20231023             Várias mensagens de DEBUG foram adicionadas no run_withdraw

1.2.35  -   Master.: Função grow_bio passa a considerar ranges diferentes de temperatura para os organismos.
20231025             Passa a ler, do arquivo de organismos, tipo de organismo (B=bactéria e F=fungo) e também o intervalo de temperatura de cultivo.
                     Corrige teste no refresh para identificar quando a falha é no painel de desenvase e também no TOTEM01.
                     Alerta e desliga resistência em get_alldata se temperatura exceder TEMPMAX.
                     Vários novos testes de segurança adicionados antes de ligar a resistência (função turn_heater).
                     Corrigido problema de exibição do PH em Aferição 
                     Criado magicvaleu e funções necessárias para verificar em get_alldata se dispositivo foi rebootado.
                     Em get_volume testa se existe FBF01 e FBF02.

1.2.36  -   Master.: No alerta de temperatura acima do máximo, introduz um deltatemp de tolerância no limite superior.
20231025             Adequa Level em IBC setvolume
                     Verifica se temperatura lida é maior do que 10 graus, caso contrário ignora

1.2.37  -   Master.: Muda bio_deltavolzero parq 25 litros. CIP não estava dando erro no withdraw por volume não variar 25 segundos.
20231031             Mantém somente a última mensagem de ajuste de PH 